--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
     <span id="testing"></span>
     <select id="carList">
     </select>
-    <button onclick="selectCompetitor()">Select</button>
-
+    <button onclick="stageDriver(findCompetitor())">Select</button>
+    <button onclick="gateTriggered(0)">GateStart</button>
+    <button onclick="gateTriggered(1)">Gate1</button>
+    <button onclick="gateTriggered(2)">Gate2</button>
+    <button onclick="gateTriggered(3)">Gate3</button>
 </div>
 <div class="container-fluid">
+    <span id="runNumber"></span>
     <table id="runtimes" style="padding:50px;background-color: lightblue; width:80%;">
         <tr>
             <th>Car#</th>
@@ -38,7 +42,7 @@
 </div>
 
 <script src="./app/js/competitorList.js"></script>
-<script src="./app/js/timer.js"></script>
+<script src="./app/js/laptime.js"></script>
 </body>
 
 </html>
