--- a/index.html
+++ b/index.html
@@ -10,42 +10,62 @@
 </head>
 
 <body>
+    <!-- Main application view -->
     <div id="main" class="container-fluid">
-        <h1>Trackside Autocross</h1>
-        <button id="competitorLookup" class="btn btn-info">Competitors</button>
-        <button id="setupScreen" class="btn btn-info">Setup Gates</button>
+        <h1></h1>
+        <button id="competitorLookup" class="btn btn-light">Competitors</button>
+        <button id="setupScreen" class="btn btn-light">Setup Gates</button>
+        <button id="ftd" class="btn btn-light">FTDs</button>
         <p id="listMsg" style="font-weight: bold; font-size: 20px; text-align: center;">
             <!-- Please import a competitor list to begin... -->
         </p>
         <br>
         <div class="row justify-content-center">
-            <button class="btn btn-primary" id="importList">Import List</button>
+            <button class="btn btn-dark" id="importList">Import List</button>
         </div>
-        <div class="container-fluid" style="padding-top:25px;">
-            <select id="carList">
-            </select>
-            <button class="btn btn-primary" id="stageDriver" onclick="stageDriver(findCompetitor())">Stage</button>
-            <button class="gateTrigger btn btn-primary" onclick="gateTriggered(0)">GateStart</button>
-            <button class="gateTrigger btn btn-primary" onclick="gateTriggered(1)">Gate1</button>
-            <button class="gateTrigger btn btn-primary" onclick="gateTriggered(2)">Gate2</button>
-            <button class="gateTrigger btn btn-primary" onclick="gateTriggered(3)">Gate3</button>
-            <button class="btn btn-primary" id="runDone" onclick="runComplete(competitorList)">Run Complete</button>
-            <p id="penaltyMsg">To add penalties click on competitor</p>
+        <div id="userControls" class="container-fluid" style="padding-top:25px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <button class="btn btn-dark" onclick="stageDriver(findCompetitor())">Stage</button>
+                    <button class="btn btn-dark" onclick="gateTriggered(0)">GateStart</button>
+                    <button class="btn btn-dark" onclick="gateTriggered(1)">Gate1</button>
+                    <button class="btn btn-dark" onclick="gateTriggered(2)">Gate2</button>
+                    <button class="btn btn-dark" onclick="gateTriggered(3)">Gate3</button>
+                    <button class="btn btn-warning" id="runDone" onclick="runComplete(competitorList)">Run Complete</button>
+                </div>
+                <div class="col-md-3">
+                    <select id="carList">
+                    </select>
+                </div>
+            </div>
+            <div>
+                <p>Total Competitors: <span id="totalCompetitors"></span></p>
+                <p>Cars completed current run: <span id="carsDoneRun"></span></p>
+                <p>To add penalties click on competitor</p>
+            </div>
         </div>
     </div>
+    <!-- Live run table shows current runs comepleted in order -->
     <div id="runTable" class="container-fluid">
-        <h3 id="runNumber"></h3>
-        <table id="runtimes">
-            <tr>
-                <th>Car#</th>
-                <th>Sector1</th>
-                <th>Sector2</th>
-                <th>Sector3</th>
-                <th>Run Time</th>
-                <th>Sum of Sectors</th>
-            </tr>
-        </table>
+        <div class="row">
+            <div class="col-md-8">
+                <h3 id="runNumber"></h3>
+                <table id="runtimes">
+                    <tr>
+                        <th>Car#</th>
+                        <th>Model</th>
+                        <th>Sector1</th>
+                        <th>Sector2</th>
+                        <th>Sector3</th>
+                        <th>Run Time</th>
+                        <th>Sum of Sectors</th>
+                    </tr>
+                </table>
+            </div>
+            
+        </div>
     </div>
+    <!-- Penalty modal for adding cones or DNF to a competitor -->
     <div class="modal" id="penaltyModal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -60,53 +80,51 @@
                     <p id="coneCounter"></p>
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-warning" id="dnfBtn">DNF</button>
                     <button class="btn btn-warning" id="coneAdder"> + </button>
                     <button class="btn btn-warning" id="coneSubtract"> - </button>
+                    <button class="btn btn-success" id="saveChanges">Save to competitor</button>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
-
+<!-- view for competitor look-up table -->
     <div id="compTable" class="container-fluid">
         <h2>Competitors</h2>
         <button class="mainScreen btn btn-info">Main</button>
+        <button id="backToList" class="btn btn-light">Back</button>
         <table id="compList" class="col-sm-4">
             <tr>
                 <th>Name</th>
                 <th>Car Number</th>
             </tr>
         </table>
-        <div class="modal" id="myModal" tabindex="-1" role="dialog">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 id="modalTitle" class="modal-title"></h3>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <!-- <h5>Car Number:</h5>
-                            <p id="compCar"></p> -->
-                        <h5>Class:</h5>
-                        <p id="compClass"></p>
-                        <h5>Run times:</h5>
-                        <p id="compRuns"></p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
+        <div id="competitorDisplay">
+            <div id="competitorData">
+
+            </div>  
         </div>
     </div>
-
+<!-- Used to set up the sector gates -->
     <div id="setupControls" class="container-fluid">
         <h2>Setup</h2>
         <p>Use the buttons to find sector gate hardware</p>
-        <button id="searchBtn" class="btn btn-warning" onclick="gateSearch()">Look for gates</button>
+        <button class="btn btn-warning" onclick="gateSearch()">Look for gates</button>
         <button class="mainScreen btn btn-info">Main</button>
+    </div>
+    <div id="ftdDisplay" class="container-fluid">
+        <button class="mainScreen btn btn-info">Main</button>
+        <h2>Fastest times of the day</h2>
+        <h4>Overall</h4>
+        <div class="container-fluid" id="overallFtd">
+
+        </div>
+        <h4>Class</h4>
+        <div class="container-fluid" id="classFtd">
+            
+        </div>
+
     </div>
 
     <script src="./app/js/competitorList.js"></script>
